--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     .nav {
       color: white;
     }
-    h1 {
+    #head {
       font-size: 70px;
     }
     img {
@@ -29,7 +29,7 @@
       margin: 0 auto;
     }
     @media (max-width: 500px) {
-      h1 {
+     #head {
         font-size: 36px;
         padding: 5px;
       }
